<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login" >
     <Button
        android:id="@+id/kewenButton1"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kewen1"

         />

    <Button
        android:id="@+id/kewenButton2"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kewen2"
        android:layout_marginTop="0px"
         />

    <Button
        android:id="@+id/kewenButton3"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kewen3"
        android:layout_marginTop="0px"
         />

    <Button
        android:id="@+id/kewenButton4"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kewen4"
        android:layout_marginTop="0px"
         />
    <Button
        android:id="@+id/kewenButton5"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kewen5"
        android:layout_marginTop="0px"
         />
    <Button
        android:id="@+id/kewenButton6"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kewen6"
        android:layout_marginTop="0px"
         />
    <Button
        android:id="@+id/kewenButton7"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kewen7"
        android:layout_marginTop="0px"
         />
    <Button
        android:id="@+id/kewenButton8"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kewen8"
        android:layout_marginTop="0px"
         />
    <Button
        android:id="@+id/kewenButton9"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kewen9"
        android:layout_marginTop="0px"
         />
    <Button
        android:id="@+id/kewenButton10"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kewen10"
        android:layout_marginTop="0px"
         />
    


    <!-- <Button
        android:id="@+id/button1"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_vertical"
        android:text="返回" /> -->
    

</LinearLayout>
