<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login" >
    <!-- <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <android.support.v4.view.PagerTabStrip
            android:id="@+id/tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </android.support.v4.view.PagerTabStrip>
        

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pagertitle"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
             />
    </android.support.v4.view.ViewPager> -->
    <Button
        android:id="@+id/button11"
        android:text="@string/one"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        />
    <Button
        android:text="@string/two"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        
        />
    <Button
        android:text="@string/three"
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        />

    <Button
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        android:text="@string/four" />
    <Button
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        android:text="@string/five" />
    <Button
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        android:text="@string/six" />
    <Button
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        android:text="@string/seven" />
    <Button
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        android:text="@string/eight" />
    <Button
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        android:text="@string/nine" />
    <Button
        android:background="@drawable/gray_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        android:text="@string/ten" />
    <!-- <Button
        android:id="@+id/share_sina"
        android:background="@drawable/gray_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        android:layout_gravity="right|bottom"
        android:text="分享app~" /> -->

</LinearLayout>
